Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127519

CurveRenderer leaks SGNodes

XMLWordPrintable

    • All
    • 8553f3b84 (dev), 04f979946 (6.8)

      The CurveRenderer is leaking SGNodes when the renderer is deleted.

      To reproduce one can run the manual test painterPathQuickShape. Changing the shape or changing the renderer will lead to leaked nodes. To get informed about leaking nodes run the test with QT_LOGGING_RULES qt*=false;qt.scenegraph.leaks=true.

      The result will be something similar to:
      qt.scenegraph.leaks: Number of leaked textures: 0
      Number of leaked materials: 9
      Number of leaked nodes: 9
      Number of leaked pixmaps: 0

      It does not always happen, so it might be the result of a racing condition.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.graphics.and.multimedia Qt Graphics Team
            matthias_rauter Matthias Rauter
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes