Avoid leaking nodes in when curve renderer is destroyed

For each visual change, the curve renderer generates new scene graph
nodes in runner objects. If the renderer was destroyed before the item
was updated, the runners and their nodes would be leaked (always in
sync mode, and sometimes in async mode).

Fix by making the renderer clean up the runners on exit, and the
runners clean up any nodes that have not been inserted into the scene
graph.

Fixes: QTBUG-127519
Change-Id: I9fcfe9d0b67cfa5b4c6fcef59cc5f78c579ec7ea
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit 8553f3b84613b3294851a19120792ae3dc4d472e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>